// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should be rendered correctly 1`] = `
<div
  className="uui-indeterminate_bar root size-12"
>
  <div
    className="progressBar"
  />
</div>
`;

exports[`ProgressBar should be rendered correctly with props 1`] = `
<div
  className="uui-indeterminate_bar root size-24"
>
  <div
    className="progressBar"
  />
</div>
`;
